--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
+    "eas-cli": "^16.17.4",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "expo-vector-icons": "^10.0.1",
