--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/material-top-tabs": "^7.3.6",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@react-navigation/stack": "^7.4.7",
     "eas-cli": "^16.17.4",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
@@ -22,9 +26,14 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "^1.6.2",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.13.1",
-    "react-native-web": "^0.20.0"
+    "react-native-screens": "^4.14.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "^0.20.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
