--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Budgety",
-  "version": "1.0.0",
+  "name": "budgety",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/drawer": "^7.5.7",
@@ -18,29 +18,26 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
-    "eas-cli": "^16.17.4",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "expo-vector-icons": "^10.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-edge-to-edge": "^1.6.2",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-pager-view": "^6.2.3",
-    "react-native-reanimated": "^4.0.2",
-    "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.14.1",
+    "react-native-edge-to-edge": "1.6.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "^0.20.0",
-    "react-native-worklets": "^0.4.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.1.9",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.7",
-    "@types/react-native": "^0.72.8",
-    "typescript": "^5.9.2"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
